Fix search input padding
* Fix margin right so that text cannot overlap the icon

--- a/_sass/layouts/_docs.scss
+++ b/_sass/layouts/_docs.scss
@@ -101,7 +101,7 @@ body.has-notification {
       height: 40px;
       border-radius: 8px;
       outline: none;
-      padding: 8px 16px;
+      padding: 8px 16px 24px 16px;
       color: #8F90A6;
       font-size: 14px;
       line-height: 24px;
